--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -4,7 +4,7 @@
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    %title= content_for?(:title) ? yield(:title) : "Jeremy Hardin"
+    %title= content_for?(:title) ? yield(:title) : "Resume - Admin"
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
@@ -25,10 +25,11 @@
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        -# %a.navbar-brand(href="/") Jeremy Hardin
+        %a.navbar-brand(href="/admin") Resume Admin
         .navbar-collapse.collapse.navbar-responsive-collapse
           %ul.nav.navbar-nav.navbar-right
-            %li.navbar-link= link_to "pdf", "resume.pdf"
+            %li.navbar-link= link_to "Personal Info", admin_personal_info_path
+            %li.navbar-link= link_to "Sections", admin_sections_path
 
     .container
       .row
