added markdown support. finished up admin for now.

--- a/app/views/admin/admin/sections.html.haml
+++ b/app/views/admin/admin/sections.html.haml
@@ -1,6 +1,7 @@
 
 .row.h2 Sections
 
+.row{style: 'padding-bottom: 30px;'}=link_to 'add new section', admin_new_section_path, class: 'btn btn-default'
 
 .row
 	.col-md-12
