--- a/app/views/admin/admin/new_section.html.haml
+++ b/app/views/admin/admin/new_section.html.haml
@@ -1,15 +1,13 @@
-
 .row.h2 
-	=@section.name
-	Section
+	Create New Section
 
-=form_for [:admin, @section] do |f|
+=form_for [:admin, @section], url: admin_new_section_path do |f|
 	.row.form-group
 		.col-md-2=f.label :name
 		.col-md-4=f.text_field :name, class: 'form-control'
 	.row.form-group
 		.col-md-2=f.label :description
-		.col-md-8=f.text_area :description, class: 'form-control', rows: 25
+		.col-md-6=f.text_area :description, class: 'form-control', rows: 10
 	.row.form-group
 		.col-md-2=f.label :order
 		.col-md-2=f.text_field :order, class: 'form-control'
