--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,7 +25,7 @@
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        -# %a.navbar-brand(href="/") Jeremy Hardin
+        -# %a.navbar-brand(href="/") Admin.first.name
         .navbar-collapse.collapse.navbar-responsive-collapse
           %ul.nav.navbar-nav.navbar-right
             %li.navbar-link= link_to "pdf", "resume.pdf", target: '_blank'
